# powdr-pilcom

./: Cargo.toml  README.md
src/: lib.rs
src/analyzed/: display.rs
src/asm_analysis/: mod.rs
src/ast/analyzed/: display.rs  mod.rs  visitor.rs
src/ast/asm_analysis/: display.rs  mod.rs
src/ast/object/: display.rs  mod.rs
src/ast/parsed/: asm.rs  build.rs  display.rs
src/cli/: main.rs
src/number/: bn254.rs  goldilocks.rs  macros.rs
src/object/: mod.rs
src/parsed/: asm.rs  build.rs  mod.rs
src/parser/: mod.rs  powdr.lalrpop  test_utils.rs
src/pil_analyzer/: call_graph.rs  condenser.rs  evaluator.rs  expression_processor.rs  mod.rs  pil_analyzer.rs  side_effect_checker.rs  statement_processor.rs  type_builtins.rs  type_inference.rs  type_processor.rs  type_unifier.rs  untyped_evaluator.rs
src/pilcom/: export.rs  expression_counter.rs  mod.rs
src/test-data/: fib.pil.json  fibonacci.pil
