[package]
name = "powdr-pilcom"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.13"
num-traits = "0.2.15"
derive_more = "0.99.17"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
schemars = { version = "0.8.16", features = ["preserve_order"]}
serde_cbor = "0.11.2"
auto_enums = "0.8.5"

# number
ark-bn254 = { version = "0.4.0", default-features = false, features = [
    "scalar_field",
] }
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
num-bigint = { version = "0.4.3", features = ["serde"] }
csv = "1.3"
serde_with = "3.6.1"
ibig = { version = "0.3.6", features = ["serde"]}

# parser
lazy_static = "1.4.0"
lalrpop-util = {version = "^0.19", features = ["lexer"]}

# parser-util
codespan-reporting = "^0.11"

[dev-dependencies]
test-log = "0.2.12"
pretty_assertions = "1.4.0"
#powdr-pil-analyzer.workspace = true
#powdr-parser.workspace = true


[lints.clippy]
uninlined_format_args = "deny"
